--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ SQLAlchemy==1.0.3
 Werkzeug==0.10.4
 argparse==1.2.1
 blinker==1.3
+dictalchemy==0.1.2.7
 itsdangerous==0.24
 psycopg2==2.6.2
 requests==2.11.0
